add game card partial and write index view

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,13 +1,19 @@
 <div>
   <section>
-    <% @popular_games.each do |game| %>
-      <%= render "game" %>
-    <% end %>
+    <ul>
+      <h2>Highest-Rated</h2>
+        <% @popular_games.each do |game| %>
+          <li><%= render "game", game: game %></li>
+        <% end %>
+    </ul>
   </section>
 
   <section>
-    <% @popular_games.each do |game| %>
-      <%= render "game" %>
-    <% end %>
+    <ul>
+      <h2>Recently Added</h2>
+        <% @newest_games.each do |game| %>
+          <li><%= render "game", game: game %></li>
+        <% end %>
+    </ul>
   </section>
 </div>
