Add game show page with points and spec folder with models

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,7 +2,7 @@
   <div>
     <div>
       <img src="<%= @game.image_url %>">
-      <p>INSERT VOTES HERE</p>
+      <p><%= @game.points %></p>
     </div>
     <div>
       <p><%= @game.name %></p>
