--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
     <ul>
       <li> <%= link_to "Home", root_path %>
     <% if logged_in? %>
-      <li><%= link_to current_user.username, user_path %></li>
-      <li><%= link_to "Logout", session_path %></li>
+      <li><%= link_to current_user.username, current_user %></li>
+      <li><%= link_to "Logout", '/logout' %></li>
     <% else %>
       <li><%= link_to "Login", new_session_path %></li>
       <li><%= link_to "Register", new_user_path %></li>
