--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <p>Placeholder SearchBar</p>
     <ul>
       <li> <%= link_to "Home", root_path %>
+      <li> <%= link_to "Create a Game", new_game_path %>
     <% if logged_in? %>
       <li><%= link_to current_user.username, current_user %></li>
       <li><%= link_to "Logout", '/logout' %></li>
