--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -1,11 +1,13 @@
 <div>
 	<h3><img src="<%= game.image_url %>"><%= game.name %></h3>
+	<p>Rating: <%= game.points %></p>
 	<p>Players: <%= game.player_range %></p>
 	<p>Play Time: <%= game.play_time %></p>
 	<a href="#openModal-<%= game.name %>">Expand</a>
-	<button>Upvote</button>
-	<button>Downvote</button>
-	<button>Add to Collection</button>
+
+	<%= render "upvote", game: game %>
+	<%= render "downvote" %>
+		<button>Add to Collection</button>
 </div>
 
 <div id="openModal-<%= game.name %>" class="modalDialog">
@@ -16,7 +18,7 @@
 		<p>Player Range: <%= game.player_range %></p>
 		<p>Play Time: <%= game.play_time %></p>
 		<p><strong>Info:</strong><%= game.description %></p>
-		<p>Categories: 
+		<p>Categories:
 			<% game.categories.each do |category| %>
 			<a href="#"><%= category.name %></a>
 			<% end %>
