--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,13 +1,13 @@
 <div>
-  <div>
-    <div>
+  <div class="row">
+    <div class="col-md-1 col-md-offset-1 center-in-div game-picture">
       <img src="<%= @game.image_url %>">
-      <p><%= @game.points %></p>
+      <p>Current Votes: <%= @game.points %></p>
     </div>
-    <div>
-      <p><%= @game.name %></p>
-      <p><%= @game.player_range %></p>
-      <p><%= @game.play_time %></p>
+    <div class="col-md-6 col-md-offset-1 center-in-div">
+      <h2><%= @game.name %></h2>
+      <p>Player range: <%= @game.player_range %></p>
+      <p>Play time: <%= @game.play_time %></p>
       <ul>
         <h3><b>Categories:</b></h3>
         <% @game.categories.each do |category| %>
@@ -22,15 +22,21 @@
       </ul>
     </div>
   </div>
-  <div>
-    <p><%= @game.description %></p>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3 center-in-div">
+      <h3><b>Game Description:</b></h3>
+      <p><%= @game.description %></p>
+    </div>
   </div>
-  <div>
+</div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 center-in-div">
     <ul>
       <h3><b>Comments:</b></h3>
       <% @game.comments.each do |comment| %>
-        <li><%= comment.text %></li>
+      <li><%= comment.text %></li>
       <% end %>
     </ul>
   </div>
+</div>
 </div>
