Add bootstrap, fixes to game show page, css for game show page

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -42,4 +42,13 @@ ul {
 .game-picture {
   padding: 30px;
   margin-top: 20px;
+  text-align: center;
+}
+
+.game-picture img {
+
+}
+
+.norm-game-font {
+  font-size: 24px;
 }
