Make upvote and downvote buttons work

--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -6,7 +6,7 @@
 	<a href="#openModal-<%= game.name %>">Expand</a>
 
 	<%= render "upvote", game: game %>
-	<%= render "downvote" %>
+	<%= render "downvote", game: game %>
 		<button>Add to Collection</button>
 </div>
 
