--- a/app/views/games/_downvote.html.erb
+++ b/app/views/games/_downvote.html.erb
@@ -1,4 +1,3 @@
-<%= form_tag("/votes", method: "post") do %>
-  <%= hidden_field_tag(:vote_value, -1) %>
-  <%= submit_tag("Downvote") %>
+<% if current_user %>
+<%= button_to "Downvote", votes_path, params: {user_id: current_user.id, game_id: game.id, value: -1} %>
 <% end %>
