--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -29,6 +29,7 @@
     </div>
   </div>
 </div>
+<% if @game.comments.length > 0 %>
 <div class="row">
   <div class="col-md-6 col-md-offset-4 center-in-div">
     <ul>
@@ -39,4 +40,6 @@
     </ul>
   </div>
 </div>
+<% end %>
+<%= link_to "Add Comment", new_game_comment_path(@game) %>
 </div>
