Make partial for form to create/edit comments

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -35,7 +35,8 @@
     <ul>
       <h3><b>Comments:</b></h3>
       <% @game.comments.each do |comment| %>
-      <li class="norm-game-font"><%= comment.text %>    by: <%= comment.commenter.username %></li>
+      <li class="norm-game-font"><%= comment.text %>    by: <%= comment.commenter.username %>
+      </li>
       <% end %>
     </ul>
   </div>
