--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,7 +1,3 @@
 <h3>Comment on <%= @game.name %></h3>
 
-<%= form_for @comment, url: game_comments_path do |f| %>
-	<%= f.text_field :text %>
-	<%= f.hidden_field :user_id, :value => current_user.id %>
-	<%= f.submit "Add Comment" %>
-<% end %>
+<%= render "comment" %>
