--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -35,7 +35,9 @@
     <ul>
       <h3><b>Comments:</b></h3>
       <% @game.comments.each do |comment| %>
-      <li class="norm-game-font"><%= comment.text %>    by: <%= comment.commenter.username %>
+      <li class="norm-game-font"><%= comment.text %>    by: <%= comment.commenter.username %><% if comment.commenter_id == current_user.id %>
+          <%= link_to "Edit", edit_game_comment_path(@game, comment) %>
+        <% end %>
       </li>
       <% end %>
     </ul>
