Show edit profile button on your profile

--- a/app/views/users/_sign_up.html.erb
+++ b/app/views/users/_sign_up.html.erb
@@ -22,5 +22,5 @@
   <%= f.label :password %>:
   <%= f.password_field :password %><br/>
 
-  <%= f.submit "Sign up" %>
+  <%= f.submit %>
 <% end %>
