--- a/app/views/users/_sign_up.html.erb
+++ b/app/views/users/_sign_up.html.erb
@@ -6,7 +6,7 @@
   </ul>
 <% end %>
 
-<%= form_for @user, url: users_path do |f| %>
+<%= form_for @user do |f| %>
   <%= f.label :first_name %>:
   <%= f.text_field :first_name %><br/>
 
