--- a/app/views/games/_vote.html.erb
+++ b/app/views/games/_vote.html.erb
@@ -3,6 +3,7 @@
     <%= button_to "Undo vote", "votes/#{vote.id}", method: "delete", params: {user_id: current_user.id, game_id: game.id} %>
 <% elsif current_user %>
   <%= button_to "Upvote", votes_path, params: {user_id: current_user.id, game_id: game.id, value: 1} %>
+  <%= button_to "Downvote", votes_path, params: {user_id: current_user.id, game_id: game.id, value: -1} %>
 <% end %>
 
 
