--- a/app/views/games/_vote.html.erb
+++ b/app/views/games/_vote.html.erb
@@ -1,9 +1,12 @@
 <% if current_user && game.votes.find_by(voter_id: current_user.id) %>
   <% vote = Vote.find_by(:voter_id => current_user.id, :game_id => game.id) %>
-    <%= button_to "Undo vote", "votes/#{vote.id}", method: "delete", params: {user_id: current_user.id, game_id: game.id} %>
+    <% if vote.value == 1 %>
+      <%= button_to "+#{vote.value} (undo?)", "votes/#{vote.id}", method: "delete", params: {user_id: current_user.id, game_id: game.id} %>
+    <% else %>
+      <%= button_to "#{vote.value} (undo?)", "votes/#{vote.id}", method: "delete", params: {user_id: current_user.id, game_id: game.id} %>
+    <% end %>
 <% elsif current_user %>
   <%= button_to "Upvote", votes_path, params: {user_id: current_user.id, game_id: game.id, value: 1} %>
   <%= button_to "Downvote", votes_path, params: {user_id: current_user.id, game_id: game.id, value: -1} %>
 <% end %>
-
 
