Started delete button

--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -3,5 +3,4 @@
   <%= render 'game_form' %>
 
 
-<!-- fix partials -->
-<!-- add delete button -->
+<%= link_to "Delete Game", game_path, :method => :delete %>
