Finish edit and delete game functions

--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -3,4 +3,4 @@
   <%= render 'game_form' %>
 
 
-<%= link_to "Delete Game", game_path, :method => :delete %>
+<%= link_to "Delete Game", game_path(@game), :method => :delete %>
