--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -13,7 +13,7 @@
   <tr>
     <td><%= user.first_name %></td>
     <td><%= user.last_name %></td>
-    <td><%= user.username %></td>
+    <td><%= link_to user.username, user %></td>
     <td><img src="<%= user.image_url %>"></td>
   </tr>
 <% end %>
