--- a/app/views/games/_add_to_collection.html.erb
+++ b/app/views/games/_add_to_collection.html.erb
@@ -1,5 +1,5 @@
 <% if current_user && current_user.games.include?(game) %>
-  <%= button_to "In Collection", "users/#{current_user.id}", method: "get" %>
+  <%= button_to "Remove from Collection", "games/#{game.id}/collections}", method: "destroy", params: {user_id: current_user.id, game_id: game.id } %>
 <% elsif current_user %>
   <%= button_to "Add to Collection", "games/#{game.id}/collections", params: {user_id: current_user.id, game_id: game.id } %>
 <% end %>
