Change game listing to table

--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -1,4 +1,4 @@
-<li class="game-card">
+<td class="game-card">
 	<a href="<%= game_path(game) %>"><img src="<%= game.image_url %>"></a>
 		<h3><%= game.name %></h3>
 	<p>Rating: <%= game.points %></p>
@@ -27,5 +27,5 @@
 				<% end %></p>
 			</div>
 		</div>
-</li>
+</td>
 
