--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body><div class="container-fluid">
 <header>
   <nav class="navbar-fixed-top">
     <h1>Bored Gamez</h1>
@@ -37,5 +37,5 @@
 
 <%= yield %>
 
-</body>
+</body></div>
 </html>
