--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -1,4 +1,4 @@
-<td class="game-card">
+<td class="game-card col-sm-4">
 	<a href="<%= game_path(game) %>"><img src="<%= game.image_url %>"></a>
 		<h3><%= game.name %></h3>
 	<p>Rating: <%= game.points %></p>
