--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -24,41 +24,6 @@ nav h1 {
   margin-top: 0;
 }
 
-/*.center-in-div {
-  text-align: center;
-  border: 1px solid #00A379;
-  border-radius: 10px;
-  margin-bottom: 18px;
-  margin-top: 20px;
-  padding-bottom: 15px;
-  padding-top: 5px;
-}*/
-
-/*ul {
-  list-style: none;
-  padding-left: 0;
-}*/
-
-/*.game-card {
-  display: inline-block;
-  width: 30%;
-  border: 1px white solid;
-}
-
-.game-picture {
-  padding: 30px;
-  margin-top: 20px;
-  text-align: center;
-}
-
-.game-picture img {
-
-}
-
-.norm-game-font {
-  font-size: 24px;
-}*/
-
 #search {
   position: absolute;
   height: 60px;
@@ -87,33 +52,37 @@ nav h1 {
   display: none;
 }
 
-/*table {
-  margin: 0 auto;
+/*Game Cards Table*/
+.game-display-table {
   text-align: center;
 }
 
-table td {
-  padding-left: 40px;
-  padding-right: 40px;
+.game-display-table td{
+  width: 30%;
+  padding: 10px;
+}
+
+.game-display-table h3 {
   font-size: 20px;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  word-wrap: break-word;
 }
 
-table th {
-  font-size: 30px;
-  text-align: center;
-  padding-left: 40px;
-  padding-right: 40px;
+.game-image {
+  float: left;
 }
 
-#found-users {
-  font-size: 50px;
-  text-align: center;
-  text-decoration: underline;
+.game-image a {
+
 }
 
-option {
-  color: black;
-}*/
+.game-card {
+}
 
+.button_to {
+  display: inline-block;
+}
+
+.game-card-buttons {
+  clear: both;
+  display: block;
+}
