--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,41 +9,42 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body><div id="main-container" class="container">
+<body>
+<div id="main-container">
 
-<div class='row'><header>
-  <nav class="navbar-fixed-top">
+  <header class="col-xs-12">
+    <nav class="navbar-fixed-top">
 
-    <h1>Bored Gamez</h1>
+      <h1>Bored Gamez</h1>
 
-    <ul class="pagination navbar-right" id="no-top-margin">
-      <li class="bigger-nav"> <%= link_to "Home", root_path %>
-    <% if logged_in? %>
-      <li class="bigger-nav"> <%= link_to "Create a Game", new_game_path %></p>
-      <li class="bigger-nav"><%= link_to current_user.username, current_user %></li>
-      <li class="bigger-nav"><%= link_to "Logout", '/logout' %></li>
-    <% else %>
-      <li class="bigger-nav"><%= link_to "Login", new_session_path %></li>
-      <li class="bigger-nav"><%= link_to "Register", new_user_path %></li>
-    <% end %>
-    </ul>
+      <ul class="pagination navbar-right" id="no-top-margin">
+        <li class="bigger-nav"> <%= link_to "Home", root_path %>
+      <% if logged_in? %>
+        <li class="bigger-nav"> <%= link_to "Create a Game", new_game_path %></p>
+        <li class="bigger-nav"><%= link_to current_user.username, current_user %></li>
+        <li class="bigger-nav"><%= link_to "Logout", '/logout' %></li>
+      <% else %>
+        <li class="bigger-nav"><%= link_to "Login", new_session_path %></li>
+        <li class="bigger-nav"><%= link_to "Register", new_user_path %></li>
+      <% end %>
+      </ul>
 
-    <form action="/games/search" id="search-form" class="navbar-right">
-      <input id="search" type="test" name="query" placeholder="search games">
-    </form>
+      <form action="/games/search" id="search-form" class="navbar-right">
+        <input id="search" type="test" name="query" placeholder="search games">
+      </form>
 
-    <i class="fa fa-child fa-2x"></i>
+      <i class="fa fa-child fa-2x"></i>
 
-    <form action="/users/search" id="search-form" class="navbar-right search-hide">
-      <input id="search" type="test" name="query" placeholder="search users">
-    </form>
+      <form action="/users/search" id="search-form" class="navbar-right search-hide">
+        <input id="search" type="test" name="query" placeholder="search users">
+      </form>
 
-    <i class="fa fa-gamepad fa-2x" id="i-hide"></i>
-  </nav>
-
-</header></div>
+      <i class="fa fa-gamepad fa-2x" id="i-hide"></i>
+    </nav>
+</header>
 
 <%= yield %>
 
-</body></div>
+</body>
+</div>
 </html>
