Fix user searching since it was ugly

--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -2,7 +2,7 @@
 <% if @found_users.length < 1 %>
 <h2>No users found with that criteria!!! Try again!</h2>
 <% else %>
-<table>
+<table class="table-search">
   <tr>
     <th>First name</th>
     <th>Last name</th>
