Finish styling of index page

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -1,23 +1,27 @@
-.bigger-nav {
-  font-size: 30px;
+* {
+  font-family: Helvetica;
 }
-
 header {
   background-color: #222222;
   height: 100px;
 }
 
 nav {
-  height: 95px;
+  background-color: #00bc8c;
+}
+nav h1 {
+  display: inline-block;
+  font-size: 75px;
+  width: 40%;
+  height: 110px;
+}
+
+nav ul li {
+  font-size: 24px;
 }
 
 nav p {
   display: inline-block;
-}
-
-nav h1 {
-  display: inline-block;
-  font-size: 75px;
 }
 
 #no-top-margin {
@@ -27,21 +31,22 @@ nav h1 {
 #search {
   position: absolute;
   height: 60px;
-  top: 7px;
-  right: 630px;
+  top: 70px;
+  right: 10px;
   width: 300px;
   border-radius: 24px;
   padding: 4px;
-  padding-left: 10px;
-  padding-right: 36px;
   font-size: 24px;
   outline: none;
+  display: inline-block;
 }
 
 .fa-gamepad, .fa-child {
+  display: inline-block;
   position: absolute;
-  top: 14px;
-  right: 600px;
+  top: 85px;
+  right: 330px;
+  /*float: right;*/
 }
 
 .search-hide {
@@ -53,13 +58,28 @@ nav h1 {
 }
 
 /*Game Cards Table*/
+.main-page-headers {
+  text-align: center;
+  background-color: #daa520;
+  width: 90%;
+  margin: 80px auto;
+  padding: 2px;
+}
+
+#all-cards {
+  /*background-color: #daa520;*/
+  width: 95%;
+  margin: 0 auto;
+}
 .game-display-table {
   text-align: center;
+  background-color: #222222;
 }
 
 .game-display-table td{
   width: 30%;
   padding: 10px;
+  background-color: #272727;
 }
 
 .game-display-table h3 {
@@ -71,18 +91,20 @@ nav h1 {
   float: left;
 }
 
-.game-image a {
-
-}
-
-.game-card {
-}
-
 .button_to {
   display: inline-block;
 }
 
 .game-card-buttons {
   clear: both;
+  width: 100%;
   display: block;
+}
+
+option {
+  color: black;
+}
+
+#wrapper {
+  margin-top: 50px;
 }
