--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -9,7 +9,7 @@
 	opacity: 0;
 	transition: opacity 400ms ease-in;
 	pointer-events: none;
-	color: black;
+	color: white;
 }
 
 .modalDialog:target {
@@ -24,12 +24,15 @@
 	padding: 5px 20px 13px 20px;
 	border-radius: 10px;
 	background: #fff;
-	background: -moz-linear-gradient(#fff, #999);
-	background: -webkit-linear-gradient(#fff, #999);
-	background: -o-linear-gradient(#fff, #999);
+	background: -moz-linear-gradient(#00bc8c, black);
+	background: -webkit-linear-gradient(#00bc8c, black);
+	background: -o-linear-gradient(#00bc8c, black);
+}
+
+.modalDialog > a {
 }
 
 .close {
 	text-decoration: none;
-	color: gray;
+	color: black;
 }
