--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,6 @@
-<h3>Edit your comment for: <%= @game.name %></h3>
+<h3 class="game-form-header">Edit your comment for: <%= @game.name %></h3>
 
-<%= form_for @comment, url: game_comment_path(@game, @comment) do |f| %>
+<%= form_for @comment, url: game_comment_path(@game, @comment), :html => {:class => "add-comment-form"}  do |f| %>
 	<%= f.text_field :text %>
 	<%= f.hidden_field :user_id, :value => current_user.id %>
 	<%= f.submit "Add Comment" %>
