--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div id="profile">
+<div id="profile-left">
 	<div id="profile-head">
 		<p><img src="<%= @user.image_url %>"></p>
 		<p><%= @user.first_name %> <%= @user.last_name %></p>
@@ -11,7 +12,7 @@
 	<div id="profile-friends">
 		<%= render partial: '/users/friends_list', locals: {user: @user} %>
 	</div>
-
+</div>
 
 	<div id="profile-games">
 		<h2>Games</h2>
@@ -24,7 +25,7 @@
 		<table>
     <% until user_collection.empty? %>
       <tr class="row">
-        <% 3.times do  %>
+        <% 2.times do  %>
         	<% if user_collection.first %>
         		<%= render partial: '/games/game', locals: { game: user_collection.shift } %>
         	<% end %>
