--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -49,7 +49,11 @@
         <% end %>
       </li>
       <% end %>
-      <p class="comment-p"><%= link_to "Add Comment", new_game_comment_path(@game) %></p>
+      <% if logged_in? %>
+        <p class="comment-p">
+          <%= link_to "Add Comment", new_game_comment_path(@game) %>
+        </p>
+      <% end %>
     </ul>
 
   </div>
